--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,33 @@
  *= require_self
  *= require_tree .
 */
+// $primaryButtonBackground: #f00;
+@import "bootstrap";
+body { padding-top: 60px; }
+.navbar .nav > li > a{
+  font-size: 15px;
+}
+@import "bootstrap-responsive";
+.simple_form{
+  input.string{
+    width: 75%;
+  }
+}
+.inner{
+  text-align: center;
+}
+/* Footer
+-------------------------------------------------- */
+.footer {
+  margin-top: 45px;
+  padding: 35px 0 36px;
+  border-top: 1px solid #e5e5e5;
+}
+.footer p {
+  margin-bottom: 0;
+  color: #555;
+}
+.l{float: left;}
+.r{float: right;}
+.c{clear: both;}
+.top a{color: red;}
