--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Laowu</title>
+  <title>劳务网</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="/">洋名劳务公司</a>
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li><%= link_to "主页", '/' %></li>
+            <li><%= link_to "求职", '/' %></li>
+            <li><%= link_to "招聘", '/' %></li>
+            <li><%= link_to "关于我们", '/' %></li>
+            <li><%= link_to "联系我们", '/' %></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="span9"><%= yield %></div>
+      <div class="span3">
+        <h2>关于我们</h2>
+        这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，.
+      </div>
+    </div>
+    <footer class="footer">
+    <p class="pull-right"><a href="#">回到顶部</a></p>
+    <p>友情链接: <a href="shenmajia.com">神马价</a></p>
+    <p>DestinyD 制作</p>
+    </footer>
 
-<%= yield %>
-
+  </div>
 </body>
 </html>
