html5 layout and quiet assets

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing jobs</h1>
+<h1>职位</h1>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>Name</th>
     <th>Salary min</th>
@@ -30,4 +30,6 @@
 
 <br />
 
-<%= link_to 'New Job', new_job_path %>
+<%= link_to '提供职位', new_job_path %>
+或者 
+<%= link_to '填写简历', new_resume_path %>
