--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>劳务网</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "劳务网" %></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <%= yield(:head) %>
 </head>
 <body>
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="/">洋名劳务公司</a>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li><%= link_to "主页", '/' %></li>
-            <li><%= link_to "求职", '/' %></li>
-            <li><%= link_to "招聘", '/' %></li>
-            <li><%= link_to "关于我们", '/' %></li>
-            <li><%= link_to "联系我们", '/' %></li>
-          </ul>
+    <header class="navbar navbar-fixed-top">
+      <nav class="navbar-inner">
+        <div class="container">
+          <%= render 'layouts/navigation' %>
         </div>
-      </div>
-    </div>
-  </div>
+      </nav>
+    </header>
+
   <div class="container">
     <div class="row">
-      <div class="span9"><%= yield %></div>
-      <div class="span3">
-        <h2>关于我们</h2>
-        这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，这里可以多写一些关于我们到文字信息，.
+      <div class="span12">
+        <%= render 'layouts/messages' %>
+        <%= yield %>
       </div>
     </div>
     <footer class="footer">
