--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,9 +19,9 @@ body { padding-top: 60px; }
 }
 @import "bootstrap-responsive";
 .simple_form{
-  input.string{
-    width: 75%;
-  }
+  // input.string, input.password{
+  //   width: 75%;
+  // }
 }
 .inner{
   text-align: center;
@@ -32,6 +32,9 @@ body { padding-top: 60px; }
   margin-top: 45px;
   padding: 35px 0 36px;
   border-top: 1px solid #e5e5e5;
+  a, a:visited{
+    color: #0096EB;
+  }
 }
 .footer p {
   margin-bottom: 0;
