--- a/app/views/applyings/edit.html.erb
+++ b/app/views/applyings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @applying %> |
-<%= link_to 'Back', applyings_path %>
+<%= link_to t('labels.show'), @applying %> |
+<%= link_to t('labels.back'), applyings_path %>
