--- a/app/views/applyings/show.html.erb
+++ b/app/views/applyings/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_applying_path(@applying) %> |
-<%= link_to 'Back', applyings_path %>
+<%= link_to t('labels.edit'), edit_applying_path(@applying) %> |
+<%= link_to t('labels.back'), applyings_path %>
