--- a/app/views/auditions/show.html.erb
+++ b/app/views/auditions/show.html.erb
@@ -36,5 +36,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_audition_path(@audition) %> |
-<%= link_to 'Back', auditions_path %>
+<%= link_to t('labels.edit'), edit_audition_path(@audition) %> |
+<%= link_to t('labels.back'), auditions_path %>
