--- a/app/views/departments/edit.html.erb
+++ b/app/views/departments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @department %> |
-<%= link_to 'Back', departments_path %>
+<%= link_to t('labels.show'), @department %> |
+<%= link_to t('labels.back'), departments_path %>
