--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @experience %> |
-<%= link_to 'Back', experiences_path %>
+<%= link_to t('labels.show'), @experience %> |
+<%= link_to t('labels.back'), experiences_path %>
