--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -31,5 +31,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_experience_path(@experience) %> |
-<%= link_to 'Back', experiences_path %>
+<%= link_to t('labels.edit'), edit_experience_path(@experience) %> |
+<%= link_to t('labels.back'), experiences_path %>
