--- a/app/views/offers/edit.html.erb
+++ b/app/views/offers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @offer %> |
-<%= link_to 'Back', offers_path %>
+<%= link_to t('labels.show'), @offer %> |
+<%= link_to t('labels.back'), offers_path %>
