--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -31,5 +31,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_offer_path(@offer) %> |
-<%= link_to 'Back', offers_path %>
+<%= link_to t('labels.edit'), edit_offer_path(@offer) %> |
+<%= link_to t('labels.back'), offers_path %>
