--- a/app/views/positions/edit.html.erb
+++ b/app/views/positions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @position %> |
-<%= link_to 'Back', positions_path %>
+<%= link_to t('labels.show'), @position %> |
+<%= link_to t('labels.back'), positions_path %>
