--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -16,5 +16,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_position_path(@position) %> |
-<%= link_to 'Back', positions_path %>
+<%= link_to t('labels.edit'), edit_position_path(@position) %> |
+<%= link_to t('labels.back'), positions_path %>
