--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -16,5 +16,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_resume_path(@resume) %> |
-<%= link_to 'Back', resumes_path %>
+<%= link_to t('labels.edit'), edit_resume_path(@resume) %> |
+<%= link_to t('labels.back'), resumes_path %>
