--- a/app/views/auditions/edit.html.erb
+++ b/app/views/auditions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @audition %> |
-<%= link_to 'Back', auditions_path %>
+<%= link_to t('labels.show'), @audition %> |
+<%= link_to t('labels.back'), auditions_path %>
