--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@department) do |f| %>
   <% if @department.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@department.errors.count, "error") %> prohibited this department from being saved:</h2>
+      <h2><%= pluralize(@department.errors.count, "error") %> 个错误:</h2>
 
       <ul>
       <% @department.errors.full_messages.each do |msg| %>
@@ -14,10 +14,6 @@
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :company_id %><br />
-    <%= f.number_field :company_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
