--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New department</h1>
+<h1>设立部门</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', departments_path %>
+<%= link_to t('labels.back'), departments_path %>
