--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,15 +1,8 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <b>Name:</b>
+  <b>名称</b>
   <%= @department.name %>
 </p>
 
-<p>
-  <b>Company:</b>
-  <%= @department.company_id %>
-</p>
 
-
-<%= link_to 'Edit', edit_department_path(@department) %> |
-<%= link_to 'Back', departments_path %>
+<%= link_to t('labels.edit'), edit_department_path(@department) %> |
+<%= link_to t('labels.back'), departments_path %>
