--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,40 +1,10 @@
-<%= form_for(@job) do |f| %>
-  <% if @job.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@job.errors.count, "error") %> prohibited this job from being saved:</h2>
-
-      <ul>
-      <% @job.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :salary_min %><br />
-    <%= f.text_field :salary_min %>
-  </div>
-  <div class="field">
-    <%= f.label :salary_max %><br />
-    <%= f.text_field :salary_max %>
-  </div>
-  <div class="field">
-    <%= f.label :finished_at %><br />
-    <%= f.datetime_select :finished_at %>
-  </div>
-  <div class="field">
-    <%= f.label :company_id %><br />
-    <%= f.number_field :company_id %>
-  </div>
-  <div class="field">
-    <%= f.label :position_id %><br />
-    <%= f.number_field :position_id %>
-  </div>
+<%= simple_form_for @job do |f| %>
+  <%= f.input :name %>
+  <%= f.input :salary_min %>
+  <%= f.input :salary_max %>
+  <%= f.input :finished_at %>
+  <%= f.input :position_id,:collection => current_company.positions %>
+  <%= f.input :desc %>
   <div class="actions">
     <%= f.submit %>
   </div>
