--- a/app/views/positions/new.html.erb
+++ b/app/views/positions/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New position</h1>
+<h1>设立职位</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', positions_path %>
+<%= link_to t('labels.back'), positions_path %>
