--- a/app/views/resumes/edit.html.erb
+++ b/app/views/resumes/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @resume %> |
-<%= link_to 'Back', resumes_path %>
+<%= link_to t('labels.show'), @resume %> |
+<%= link_to t('labels.back'), resumes_path %>
