--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -30,7 +30,10 @@
   <%= @job.position_id %>
 </p>
 
+<p>
 <%= link_to t('labels.edit'), edit_job_path(@job) %> |
 <%= link_to t('labels.back'), jobs_path %>
+</p>
 
-<%= button_to "应聘",job_applyings_path(@job) %>
+<%= button_to "应聘",job_applyings_path(@job), :class => 'btn btn-primary' unless @job.applyinged?(current_user) %>
+<%= button_tag "应聘", :disable_with => '已应聘' ,:class => 'btn btn-inverse' if @job.applyinged?(current_user) %>
